--- a/ursine/ursine-polar.css
+++ b/ursine/ursine-polar.css
@@ -263,7 +263,7 @@ del {
 
 mark {
   padding: 2px 1px;
-  background: #d3ffa4;
+  /*background: #d3ffa4;*/
   color: inherit;
 }
 
@@ -372,7 +372,7 @@ th {
 }
 
 #write h2 {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   margin: 0.7rem 0;
 }
 
