--- a/ursine/ursine-umbra.css
+++ b/ursine/ursine-umbra.css
@@ -1081,3 +1081,40 @@ footer.ty-footer {
     color: #ddd;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+}
+::-webkit-scrollbar:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.3);
+  background-clip: padding-box;
+}
+::-webkit-scrollbar-thumb:active {
+  background: rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb:vertical {
+  border-left: 4px solid transparent;
+  border-left: 0;
+  min-height: 42px;
+}
+::-webkit-scrollbar-thumb:vertical:active {
+  border-left: 0;
+}
+::-webkit-scrollbar-thumb:horizontal {
+  border-top: 2px solid transparent;
+  border-top: 0;
+  min-width: 32px;
+}
+::-webkit-scrollbar-thumb:horizontal:active {
+  border-top: 0;
+}
+::-webkit-scrollbar-corner {
+  background: 0 0;
+}
+
